Kubernetes/Azure/configure/istio/namespace_egressgateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-egress
  labels:
    ns: istio-egress
    istio-injection: enabled
