Kubernetes/Azure/configure/istio/namespace_ingressgateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  labels:
    ns: istio-ingress
