Kubernetes/Azure/configure/istio/namespace_istiosystem.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    ns: istio-system
