Kubernetes/Azure/configure/istio/peerauthentication_ingressgateway.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  mtls:
    mode: STRICT
  # Disable for prometheus scraping (istio annotation: prometheus.io/port)
  # See: peerauthentication_mutualtls.yaml
  portLevelMtls:
    15090:
      mode: DISABLE
