Kubernetes/Azure/configure/istio/gateway_httpdefault.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway # Use Istio default gateway implementation.
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    # Namespace/VirtualServiceHost
    - "*"
