Kubernetes/Azure/configure/istio/networkpolicy_denyall.yaml
# Deny all ingress by default.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: istio-operator
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
# Deny all egress that is not targeting resources inside the cluster.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: istio-system
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  # Pods.
  - to:
    - ipBlock:
        cidr: 10.1.0.0/16
